# opslab-mindguard

./: .env.example  .gitignore  AUTO_TELEGRAM_LINKING_SUMMARY.md  CARGO_LOCK_REQUIRED.md  COMMIT_MESSAGE.txt  CRITICAL_ISSUES_AND_FIXES.md  Cargo.toml  DEPLOYMENT.md  EXTRACTED_DATA_SUMMARY.md  FINAL_IMPLEMENTATION.md  GENERATE_LOCKFILE.sh  IMPLEMENTATION_GUIDE.md  PRODUCTION_DEPLOY.md  PRODUCTION_READY_CHECKLIST.md  QUICK_START.md  RAILWAY_BUILD_INSTRUCTIONS.md  README.md  RUST_IMPLEMENTATION.md  STATUS.md  SUMMARY.md  TEAMPULSE_ALL_DATA.json  WALL_ALL_FEEDBACKS.json  WOW_FEATURES_IMPLEMENTATION_COMPLETE.md  extract_all_teampulse.py  extract_data.py  extract_real_data.py  extract_teampulse_all.py  extraction_log.txt  final_extract.py  import_wall_data.py  import_wall_posts.py  index.html  old_wall_bundle.js  old_wall_page.html  old_wall_styles.css  platform_structure.md  setup-railway-vars.sh  setup.sh  teampulse_direct__api_metrics.json  test_api.py  (+2 more)
backend/: .cache-bust  .dockerignore  .env.example  Cargo.toml  Dockerfile  config.py  database_schema.sql  index 2.html  index.html  main.py  railway.toml  requirements.txt  run_migration_19.py  sqlx-data.json
backend/.sqlx/: query-08b3eda36f9361d87afa56c2b19ab75d5b0247b2e7c7b900a514c2bac7fc26d4.json  query-0a3bad7ada00d432ed7f2c6141a72788cc98fa55572d8d8b71e1146320d41ea6.json  query-138fe8d24e4e719050b9911fa1cb547fd7891eaacfc48b8cafbf6a8e96620881.json  query-15089e83bb117446613470457420fc84013de3526fbd9d3a7a24ef4c6de09c22.json  query-167b2febb0a17115d475b3f0bedb6f436826db3f23696999744a89b4f06411a4.json  (+45 more)
docs/: STATUS.md  (+28 more)
(+98 files in other folders)
