[package]
name = "opslab_mindguard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-openai = "0.21"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "json"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "multipart", "stream", "rustls-tls"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
teloxide = { version = "0.12", features = ["macros", "throttle", "webhooks", "rustls"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full", "fs", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
aes-gcm = "0.10"
rand_core = "0.6"
once_cell = "1"
hmac = "0.12"
sha2 = "0.10"
tokio-cron-scheduler = "0.10"
